--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 asgiref==3.7.1
 Django==4.2.1
+django-request==1.6.2
 Pillow==9.5.0
+python-dateutil==2.8.2
+six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.6.2
