Add separate build script.

--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "scripts": {
     "minify-js": "uglifyjs --compress --mangle -- assets/js/main.js > build/assets/js/main.js",
     "minify-css": "minify assets/css/main.css > build/assets/css/main.css",
-    "copy-img": "cp -r assets/images/ build/assets/",
-    "copy-html": "cp index.html build/",
-    "build": "mkdir -p build/assets/{js,css,images} && npm run minify-js && npm run minify-css && npm run copy-img && npm run copy-html"
+    "build": "./build.sh"
   },
   "author": "Karolis Strazdas",
   "license": "ISC",
