--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "personal-site",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Personal website.",
   "scripts": {
     "minify-js": "uglifyjs --compress --mangle -- ./assets/js/main.js > ./build/assets/js/main.js",
     "minify-css": "minify ./assets/css/main.css > ./build/assets/css/main.css",
-    "build": "mkdir -p ./build/assets/{js,css,images} && ./build.sh"
+    "build": "mkdir -p ./build/assets/{js,css,images} && ./scripts/build.sh"
   },
   "author": "Karolis Strazdas",
   "license": "ISC",
