--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.2.0",
   "description": "Personal website.",
   "scripts": {
-    "minify-js": "uglifyjs --compress --mangle -- ./assets/js/main.js > ./build/assets/js/main.js",
-    "minify-css": "minify ./assets/css/main.css > ./build/assets/css/main.css",
+    "minify-js": "uglifyjs --compress --mangle -- ./assets/js/main.js > ./build/js/main.js",
+    "minify-css": "minify ./assets/css/main.css > ./build/css/main.css",
     "build": "mkdir -p ./build/assets/{js,css,images} && ./scripts/build.sh",
-    "dev": "serve ."
+    "dev": "serve assets",
+    "serve": "serve build"
   },
   "author": "Karolis Strazdas",
   "license": "MIT",
