--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "minify-js": "uglifyjs --compress --mangle -- ./assets/js/main.js > ./build/js/main.js",
     "minify-css": "minify ./assets/css/main.css > ./build/css/main.css",
-    "build": "mkdir -p ./build/assets/{js,css,images} && ./scripts/build.sh",
+    "build": "./scripts/build.sh",
     "dev": "serve assets",
     "serve": "serve build"
   },
