--- a/vercel.json
+++ b/vercel.json
@@ -9,5 +9,23 @@
                 }
             ]
         }
+    ],
+    "rewrites": [
+        {
+            "source": "/",
+            "destination": "/about.html"
+        },
+        {
+            "source": "/positions",
+            "destination": "/positions.html"
+        },
+        {
+            "source": "/education",
+            "destination": "/education.html"
+        },
+        {
+            "source": "/projects",
+            "destination": "projects.html"
+        }
     ]
 }
