--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,7 @@
     "rewrites": [
         {
             "source": "/",
-            "destination": "/about.html"
+            "destination": "/index.html"
         },
         {
             "source": "/positions",
