--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
     "chore:minify-js": "uglifyjs --compress --mangle -- ./assets/js/main.js > ./build/js/main.js",
     "chore:minify-css": "minify ./assets/css/main.css > ./build/css/main.css",
     "chore:compile-html": "node scripts/compile-html.js",
-    "dev": "npm run chore:compile-html && serve assets/",
+    "chore:watch": "node scripts/build-watch.js",
+    "dev": "npm run chore:compile-html && concurrently \"npm run chore:watch\" \"npm run serve:dev\"",
     "build": "npm run chore:compile-html && node scripts/build-prod.js",
     "serve": "npm run chore:compile-html && serve build",
+    "serve:dev": "serve assets/",
     "build:prod": "node scripts/build-prod.js"
   },
   "author": "Karolis Strazdas",
   "license": "MIT",
   "devDependencies": {
+    "chokidar": "^4.0.3",
+    "concurrently": "^9.1.2",
     "minify": "^10.2.0",
     "serve": "^14.2.3",
     "uglify-js": "^3.17.4"
