--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "chore:minify-css": "minify ./assets/css/main.css > ./build/css/main.css",
     "chore:compile-html": "node scripts/compile-html.js",
     "chore:watch": "node scripts/build-watch.js",
-    "dev": "npm run chore:compile-html && concurrently \"npm run chore:watch\" \"npm run serve:dev\"",
+    "dev": "concurrently \"npm run chore:watch\" \"npm run serve:dev\"",
     "build": "npm run chore:compile-html && node scripts/build-prod.js",
     "serve": "npm run chore:compile-html && serve build",
     "serve:dev": "serve assets/",
