feat: Update project details and enhance SEO
- Updated meta description and keywords in projects.html for better SEO.
- Added OpenGraph and Twitter Card metadata for improved social sharing.
- Introduced robots.txt to manage web crawler access.
- Updated sitemap.xml with new last modified dates.
- Implemented service worker (sw.js) for content caching.
- Enhanced about, education, positions, and projects context with new descriptions and links.
- Add pre-commit hook script to compile newest HTML form templates before commiting.
- Updated package version to 1.7.1 and adjusted build scripts for service worker versioning.
- Improved accessibility and semantic HTML in navigation and header templates.

--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "personal-site",
-  "version": "1.4.7",
+  "version": "1.7.4",
   "description": "Personal website.",
   "scripts": {
     "chore:minify-js": "uglifyjs --compress --mangle -- ./assets/js/main.js > ./build/js/main.js",
     "chore:minify-css": "minify ./assets/css/main.css > ./build/css/main.css",
     "chore:compile-html": "node scripts/compile-html.js",
     "chore:watch": "node scripts/build-watch.js",
+    "chore:install-hooks": "chmod +x .git/hooks/pre-commit && echo 'Git hooks installed successfully!'",
     "dev": "concurrently \"npm run chore:watch\" \"npm run serve:dev\"",
     "build": "npm run chore:compile-html && node scripts/build-prod.js",
     "serve": "npm run chore:compile-html && serve build",
     "serve:dev": "serve assets/",
+    "serve:prod": "serve build/",
     "build:prod": "node scripts/build-prod.js"
   },
   "author": "Karolis Strazdas",
