--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "personal-site",
-    "version": "1.9.0",
+    "version": "1.10.3",
     "description": "Personal website.",
     "scripts": {
-        "chore:minify-js": "uglifyjs --compress --mangle -- ./assets/js/main.js > ./build/js/main.js",
+        "chore:minify-js": "uglifyjs --compress --mangle -- ./assets/js/main.js > ./build/js/main.js && uglifyjs --compress --mangle -- ./assets/js/background.js > ./build/js/background.js",
         "chore:minify-css": "minify ./assets/css/main.css > ./build/css/main.css",
         "chore:compile-html": "node scripts/compile-html.js",
         "chore:watch": "node scripts/build-watch.js",
